--- a/source/_posts/ul899l.md
+++ b/source/_posts/ul899l.md
@@ -1,14 +1,10 @@
 ---
-title: 解决moviepy不通尺寸的视频合成画屏问题
+title: moviepy竖屏转横屏
 date: 2022-07-20T08:37:53.000Z
 tags: ['python','moviepy']
 ---
   
 本文已废弃，moviepy 效率真是太慢了，推荐使用 ffmpeg
-
-## 背景
-
-使用 moviepy 合并不通尺寸的视频就会出现花屏的现象，一个很简单的办法就是 `resize`成相同的尺寸，但是很多时候横屏和竖屏的视频需要合成到一起，这样`resize`成一个尺寸视频就会变形严重。
 
 ## 解决思路
 
